fix(merlin-www-footer): correct brand logo position on mobile

--- a/packages/merlin-www-footer/sass/houseandgarden/houseandgarden.scss
+++ b/packages/merlin-www-footer/sass/houseandgarden/houseandgarden.scss
@@ -4,6 +4,8 @@
 @import "../wireframe/wireframe";
 
 .c-footer__list-item--brand-logo {
+    bottom: 5px;
+
     svg {
         fill: $white;
         width: 80px;
