--- a/packages/merlin-www-footer/sass/tatler/_tatler_base.scss
+++ b/packages/merlin-www-footer/sass/tatler/_tatler_base.scss
@@ -1,4 +1,6 @@
 .c-footer__list-item--brand-logo {
+    bottom: 10px;
+
     svg {
         max-height: 30px;
         max-width: 30px;
