--- a/packages/merlin-www-footer/sass/wireframe/wireframe.scss
+++ b/packages/merlin-www-footer/sass/wireframe/wireframe.scss
@@ -17,6 +17,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    position: relative;
 }
 .c-footer__list-item {
     @include font-size(13px);
@@ -36,9 +37,17 @@
 .c-footer__list-item--copyright {}
 
 .c-footer__list-item--brand-logo {
+    position: absolute;
+    bottom: -5px;
+    padding: 0;
+    right: 0;
+
     svg, img {
         width: 80px;
     }
+}
+.c-footer__list-item + .c-footer__list-item--brand-logo {
+    border-top: none;
 }
 
 
@@ -63,6 +72,7 @@
     }
 
     .c-footer__list-item--brand-logo {
+        position: static;
         padding-right: 0;
     }
 
